<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

	<androidx.cardview.widget.CardView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content">

	    <RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="24dp"
		android:background="#f1e189">

		<TextView
		    android:id="@+id/txtViewTitle"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:padding="16dp"
		    android:text="@string/txt_enter_item"
		    android:gravity="center"
		    android:textStyle="bold|italic"
		    android:textSize="20sp"
		    android:textColor="#000"/>

		<EditText
		    android:id="@+id/editTextBabyItem"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/txtViewTitle"
		    android:padding="10dp"
		    android:hint="@string/hint_enter_item"
		    android:textColor="#000"/>

		<EditText
		    android:id="@+id/editTextItemQuantity"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/editTextBabyItem"
		    android:padding="10dp"
		    android:hint="@string/hint_item_qty"
		    android:inputType="number"
		    android:textColor="#000"/>

		<EditText
		    android:id="@+id/editTextItemColor"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/editTextItemQuantity"
		    android:padding="10dp"
		    android:hint="@string/hint_item_color"
		    android:textColor="#000"/>

		<EditText
		    android:id="@+id/editTextItemSize"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/editTextItemColor"
		    android:padding="10dp"
		    android:hint="@string/hint_item_size"
		    android:inputType="number"
		    android:textColor="#000"/>

		<Button
		    android:id="@+id/btnSave"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerHorizontal="true"
		    android:paddingLeft="20dp"
		    android:paddingRight="20dp"
		    android:background="#cc0e74"
		    android:layout_marginTop="10dp"
		    android:layout_below="@id/editTextItemSize"
		    android:text="@string/btn_save"
		    android:textSize="20sp"
		    android:textStyle="bold"
		    android:textColor="#ffffff"/>

	    </RelativeLayout>

	</androidx.cardview.widget.CardView>

</LinearLayout>